--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <header>
   💖 The Pink Club – Face Shape Analyzer 💖
   <div>
-    <img id="logo" src="media/TPC cover.png">
+    <img id="logo" src="./media/TPC cover.png">
   </div>
 </header>
 
@@ -110,36 +110,36 @@
 
     if (randomShape === "Square") {
       htmlImages = `
-        <img src="media/Cuadrado1.jpeg">
-        <img src="media/Cuadrado2.jpeg">
-        <img src="media/Cuadrado3.jpeg">
+        <img src="./media/Cuadrado1.jpeg">
+        <img src="./media/Cuadrado2.jpeg">
+        <img src="./media/Cuadrado3.jpeg">
       `;
       video = `<iframe width="560" height="315" src="https://www.youtube.com/watch?v=RF1oMaJOna8" allowfullscreen></iframe>`;
     }
 
     if (randomShape === "Oval") {
       htmlImages = `
-        <img src="media/Ovalado1.jpeg">
-        <img src="media/Ovalado2.jpeg">
-        <img src="media/Ovalado3.jpeg">
+        <img src="./media/Ovalado1.jpeg">
+        <img src="./media/Ovalado2.jpeg">
+        <img src="./media/Ovalado3.jpeg">
       `;
       video = `<iframe width="560" height="315" src="https://www.youtube.com/watch?v=zgP7Qnoki_Q" allowfullscreen></iframe>`;
     }
 
     if (randomShape === "Round") {
       htmlImages = `
-        <img src="media/Redondo1.jpeg">
-        <img src="media/Redondo2.jpeg">
-        <img src="media/Redondo3.jpeg">
+        <img src="./media/Redondo1.jpeg">
+        <img src="./media/Redondo2.jpeg">
+        <img src="./media/Redondo3.jpeg">
       `;
       video = `<iframe width="560" height="315" src="https://www.youtube.com/shorts/HU4c62oa5Qo" allowfullscreen></iframe>`;
     }
 
     if (randomShape === "Heart") {
       htmlImages = `
-        <img src="media/Corazon1.jpeg">
-        <img src="media/Corazon2.jpeg">
-        <img src="media/Corazon3.jpeg">
+        <img src="./media/Corazon1.jpeg">
+        <img src="./media/Corazon2.jpeg">
+        <img src="./media/Corazon3.jpeg">
       `;
       video = `<iframe width="560" height="315" src="https://www.youtube.com/watch?v=k_b2gi1jp78" allowfullscreen></iframe>`;
     }
